# decoding-amplifies-bias

./: .gitignore  AGENTS.md  Makefile  PROPOSAL.md  README.md  REQUIREMENTS.md  pyproject.toml
data/: prompt_bank_v1.csv
docs/: .gitignore
docs/week1/: README.md  artifact_counts.csv  prompt_type_metrics.csv  report.tex
docs/week2/: report.tex
docs/week3/: report.tex
docs/week5/: report.tex
src/app/: __init__.py  cache.py  cli.py  device.py  generation.py  metrics.py  models.py  prompt_bank.py  quality.py  sanity.py  scoring.py  visualization.py  week5_antirep.py  week5_masking.py
src/app/exai/: __init__.py  benchmark.py  cli.py  compare.py  config.py  constants.py  data.py  eval.py  evaluate.py  faithfulness.py  inference.py  lrp_core.py  lrp_linear.py  lrp_transformer.py  modeling.py  notebook_support.py  render.py  schemas.py  sensitivity.py  splits.py  train.py  trainer.py  utils.py  visualize.py
src/app/settings/: generation.py  masking.py  scoring.py  settings.py
src/decoding_amplifies_bias/: cache.py  generation.py  models.py  prompt_bank.py
tests/: conftest.py  exai_test_utils.py  test_device.py  test_exai_benchmark.py  test_exai_boundary.py  test_exai_cli_smoke.py  test_exai_data.py  test_exai_eval.py  test_exai_faithfulness.py  test_exai_inference.py  test_exai_lrp_linear.py  test_exai_lrp_transformer.py  test_exai_notebook_support.py  test_exai_sensitivity.py  test_exai_training_smoke.py  test_exai_visualization.py  test_generation_cache.py  test_prompt_bank.py  test_quality.py  test_scoring.py  test_week3_metrics.py  test_week5_antirep.py  test_week5_masking.py
