[project]
name = "decoding-amplifies-bias"
version = "0.1.0"
description = "Decoding vs bias (regard) experiments for GPT-2 (proposal implementation)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "torch",
  "transformers",
  "pandas",
  "pyarrow",
  "tqdm",
]

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "ruff>=0.5",
  "pyright>=1.1.380",
]

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = [
  "outputs",
  ".venv",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]  # let ruff formatter handle line length

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"