[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "decoding-amplifies-bias"
version = "0.1.0"
description = "Decoding vs bias (regard) experiments for GPT-2 (proposal implementation)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "torch>=2.2,<3.0",
  "transformers>=4.40,<5.0",
  "pandas>=2.2,<3.0",
  "pyarrow>=15,<20",
  "tqdm>=4.66,<5.0",
]

[project.scripts]
decoding-greedy = "decoding_amplifies_bias.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "ruff>=0.5,<0.10",
  "pyright>=1.1.380,<2",
  "ipykernel>=6,<7",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = [
  "outputs",
  ".venv",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]  # let ruff formatter handle line length

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.pyright]
include = ["src", "tests"]
typeCheckingMode = "standard"
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"
