[project]
name = "decoding-amplifies-bias"
version = "0.1.0"
description = "Decoding vs bias (regard) experiments for GPT-2 (proposal implementation)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.1",
    "ipykernel>=6.31.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "pyarrow>=23.0.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
    "transformers>=5.3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "ruff>=0.5,<0.10",
  "pyright>=1.1.380,<2",
  "ipykernel>=6,<7",
]

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = [
  "outputs",
  ".venv",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]  # let ruff formatter handle line length

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]

[tool.pyright]
include = ["src", "tests"]
typeCheckingMode = "standard"
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.9.10",
]
